<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carbo"
        android:orderInCategory="101"
        android:title="@string/action_carbo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_creatina"
        android:orderInCategory="101"
        android:title="@string/action_creatina"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gasto"
        android:orderInCategory="101"
        android:title="@string/action_gasto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cal"
        android:orderInCategory="101"
        android:title="@string/action_cal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_imc"
        android:orderInCategory="101"
        android:title="@string/action_imc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_agua"
        android:orderInCategory="101"
        android:title="@string/action_agua"
        android:icon="@drawable/pierna"
        app:showAsAction="never" />

</menu>
